# PersonaGraph

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
agent/: graph.py  models.py  nodes.py  prompts.py  state.py  tools.py
api/: keepalive.py  logging_config.py  main.py  routes.py
app/context/: internal_docs.py  retriever.py
app/security/: guardrails.py  sensitivity.py
docs/: DOCS_PROTOCOL.md  agent.md  api.md  architecture-review.md  architecture.md  frontend.md  index.md  model-routing.md  sse-events.md  task-archive.md  task.md  testing-phases.md
frontend/: index.html
frontend/src/: App.css  App.tsx  ChatView.tsx  IntakeForm.tsx  ThinkingPanel.tsx  index.css  types.ts  useInterview.ts
mermaid/: mermaid_test.py
scripts/: adversarial_test.py  cache_verification.py  headless_runner.py  hypothesis_trace.py  judge_calibration.py  score_calibration.py  thinking_inspection.py
